preparando el diseño de la web

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: normal
-title: Desarrollo de videojuegos con Phaser
+title: Despliegue de Aplicaciones Web
 ---
 
 <div class="row titulo">
@@ -8,12 +8,10 @@ title: Desarrollo de videojuegos con Phaser
         <img src="img/phaser_logo.png">
     </div>
     <div class="col-sm-10">
-        <h1>Desarrollo de videojuegos con Phaser</h1>
+        <h1>Despliegue de Aplicaciones Web</h1>
         
-        <p> Esta web es un curso sobre desarrollo de videojuegos utilizando la librería Phaser de JavaScript.
-            Abordaremos primero el software necesario para poder desarrollar videojuegos con esta librería,
-            y después iremos viendo poco a poco conceptos básicos, como dibujo de imágenes, textos, reproducción de audio, paso de pantallas, y otros más avanzados como sistemas de cámaras o partículas
-         <p>El uso de estos materiales está sujeto a una licencia Creative Commons <a target="_blank" href="https://creativecommons.org/licenses/by-nc/4.0/">CC BY-NC</a>. Las imágenes necesarias, salvo que se indique expresamente lo contrario, se han tomado de la <a href="http://phaser.io/">web oficial de Phaser</a>, en sus respectivos tutoriales.</p>
+        <p> Esta web recoge los contenidos del módulo de Despliegue de Aplicaciones Web de 2º curso del CFGS DAW impartido en el IES San Vicente. 
+        <p> El uso de estos materiales está sujeto a una licencia Creative Commons <a target="_blank" href="https://creativecommons.org/licenses/by-nc/4.0/">CC BY-NC</a>. </p>
     </div>
 </div>
 
