--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ title: Despliegue de Aplicaciones Web
 
 <div class="row titulo">
     <div class="col-sm-2">
-        <img src="img/despliegue_logo.gif">
+        <img src="img/despliegue_logo.jpg">
     </div>
     <div class="col-sm-10">
         <h1>Despliegue de Aplicaciones Web</h1>
