Cambiando la descripcion del curso

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@ title: Despliegue de Aplicaciones Web
         <h1>Despliegue de Aplicaciones Web</h1>
         
         <p> Esta web recoge los contenidos del módulo de Despliegue de Aplicaciones Web de 2º curso del CFGS DAW impartido en el IES San Vicente. 
+        <p> Con el fin de dar una cobertura lo más amplia posible de las tecnologías web con más auge hoy en día, y teniendo en cuenta que el módulo de Despliegue de Aplicaciones Web está muy vinculado con el de Desarrollo en Entorno Servidor, en este centro se optará por centrar en este último el desarrollo de aplicaciones web servidor con PHP empleando Apache, y en el módulo de Despliegue se tratará, por un lado, la configuración de servidores web empleando el framework Node.js, para posteriormente ver cómo desplegar este tipo de servidores y aplicaciones en un entorno real, junto con otros servidores como Nginx, y añadiendo módulos de funcionalidad adicional, como gestores de bases de datos.</p>
         <p> El uso de estos materiales está sujeto a una licencia Creative Commons <a target="_blank" href="https://creativecommons.org/licenses/by-nc/4.0/">CC BY-NC</a>. </p>
     </div>
 </div>
