introducción contenidos de la segunda celda

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ title: Despliegue de Aplicaciones Web
 
 <div class="row titulo">
     <div class="col-sm-1">
-        <img src="img/despliegue_logo.png" width="300" height="300">
+        <img src="img/despliegue_logo.png" width="300" height="150">
     </div>
     <div class="col-sm-11">
         <h1>Despliegue de Aplicaciones Web</h1>
@@ -28,6 +28,15 @@ title: Despliegue de Aplicaciones Web
             <a href="md/es/04">Uso de módulos con Node.js</a>
             <a href="md/es/05">Primeros pasos con Express.js</a>
             <a href="md/es/06">Express como proveedor de servicios REST</a>
+        </div>
+
+        <div class="celda p-3">
+            <h4>2. Acceso a datos con Node.js</h4>
+            <a href="md/es/01">Primeros pasos con MongoDB y Mongoose</a>
+            <a href="md/es/02">Opciones avanzadas de MongoDB y Mongoose</a>
+            <a href="md/es/03">Desarrollo de una API REST con Express y MongoDB</a>
+            <a href="md/es/04">Acceso a bases de datos relacionales</a>
+            <a href="md/es/05">Uso del ORM Sequelize</a>            
         </div>
     </div>
 </div>
