rehaciendo el diseño

--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@ title: Despliegue de Aplicaciones Web
 ---
 
 <div class="row titulo">
-    <div class="col-sm-1">
-        <img src="img/despliegue_logo.png" width="300" height="150">
+    <div class="col-sm-2">
+        <img src="img/despliegue_logo.png">
     </div>
-    <div class="col-sm-11">
+    <div class="col-sm-10">
         <h1>Despliegue de Aplicaciones Web</h1>
         
         <p> Esta web recoge los contenidos del módulo de <em>Despliegue de Aplicaciones Web</em> de 2º curso del CFGS DAW impartido en el IES San Vicente.</p>
@@ -19,7 +19,7 @@ title: Despliegue de Aplicaciones Web
 </div>
 
 <div class="row g-3">
-    <div class="col-md-4">
+    <div class="col-md-6">
         <div class="celda p-3">
             <h4>1. Introducción a Node.js y Express.js</h4>
             <a href="md/es/01">Introducción a las aplicaciones web</a>
@@ -29,7 +29,8 @@ title: Despliegue de Aplicaciones Web
             <a href="md/es/05">Primeros pasos con Express.js</a>
             <a href="md/es/06">Express como proveedor de servicios REST</a>
         </div>
-
+    </div>
+    <div class="col-md-6">
         <div class="celda p-3">
             <h4>2. Acceso a datos con Node.js</h4>
             <a href="md/es/01">Primeros pasos con MongoDB y Mongoose</a>
