--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ title: Despliegue de Aplicaciones Web
 
 <div class="row titulo">
     <div class="col-sm-2">
-        <img src="img/despliegue_logo.png">
+        <img src="img/despliegue_logo.png" width="100%">
     </div>
     <div class="col-sm-10">
         <h1>Despliegue de Aplicaciones Web</h1>
@@ -18,7 +18,7 @@ title: Despliegue de Aplicaciones Web
     </div>
 </div>
 
-<div class="row g-3">
+<div class="container row g-3">
     <div class="col-md-6">
         <div class="celda p-3">
             <h4>1. Introducción a Node.js y Express.js</h4>
