--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@ title: Despliegue de Aplicaciones Web
 ---
 
 <div class="row titulo">
-    <div class="col-sm-2">
+    <div class="col-md-2">
         <img src="img/despliegue_logo.png" width="100%">
     </div>
-    <div class="col-sm-10">
+    <div class="col-md-10">
         <h1>Despliegue de Aplicaciones Web</h1>
         
         <p> Esta web recoge los contenidos del módulo de <em>Despliegue de Aplicaciones Web</em> de 2º curso del CFGS DAW impartido en el IES San Vicente.</p>
@@ -18,7 +18,7 @@ title: Despliegue de Aplicaciones Web
     </div>
 </div>
 
-<div class="container row g-3">
+<div class="row g-3">
     <div class="col-md-6">
         <div class="celda p-3">
             <h4>1. Introducción a Node.js y Express.js</h4>
