--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ title: Despliegue de Aplicaciones Web
 ---
 
 <div class="row titulo">
-    <div class="col-md-2">
+    <div class="logo col-md-2">
         <img src="img/despliegue_logo.png" width="100%">
     </div>
     <div class="col-md-10">
