--- a/index.html
+++ b/index.html
@@ -22,22 +22,22 @@ title: Despliegue de Aplicaciones Web
     <div class="col-md-6">
         <div class="celda p-3">
             <h4>1. Introducción a Node.js y Express.js</h4>
-            <a href="md/es/01">Introducción a las aplicaciones web</a>
-            <a href="md/es/02">Algunos conceptos de JavaScript</a>
-            <a href="md/es/03">Introducción a Node.js</a>
-            <a href="md/es/04">Uso de módulos con Node.js</a>
-            <a href="md/es/05">Primeros pasos con Express.js</a>
-            <a href="md/es/06">Express como proveedor de servicios REST</a>
+            <a href="tema01/t01_01">Introducción a las aplicaciones web</a>
+            <a href="tema01/t01_02">Algunos conceptos de JavaScript</a>
+            <a href="tema01/t01_03">Introducción a Node.js</a>
+            <a href="tema01/t01_04">Uso de módulos con Node.js</a>
+            <a href="tema01/t01_05">Primeros pasos con Express.js</a>
+            <a href="tema01/t01_06">Express como proveedor de servicios REST</a>
         </div>
     </div>
     <div class="col-md-6">
         <div class="celda p-3">
             <h4>2. Acceso a datos con Node.js</h4>
-            <a href="md/es/01">Primeros pasos con MongoDB y Mongoose</a>
-            <a href="md/es/02">Opciones avanzadas de MongoDB y Mongoose</a>
-            <a href="md/es/03">Desarrollo de una API REST con Express y MongoDB</a>
-            <a href="md/es/04">Acceso a bases de datos relacionales</a>
-            <a href="md/es/05">Uso del ORM Sequelize</a>            
+            <a href="tema02/t02_01">Primeros pasos con MongoDB y Mongoose</a>
+            <a href="tema02/t02_02">Opciones avanzadas de MongoDB y Mongoose</a>
+            <a href="tema02/t02_03">Desarrollo de una API REST con Express y MongoDB</a>
+            <a href="tema02/t02_04">Acceso a bases de datos relacionales</a>
+            <a href="tema02/t02_05">Uso del ORM Sequelize</a>            
         </div>
     </div>
 </div>
