cambiando los colores

--- a/index.html
+++ b/index.html
@@ -41,3 +41,23 @@ title: Despliegue de Aplicaciones Web
         </div>
     </div>
 </div>
+
+<div class="row g-3">
+    <div class="col-md-6">
+        <div class="celda p-3">
+            <h4>3. Opciones avanzadas de Express.js</h4>
+            <a href="tema03/t03_01">Desarrollo de aplicaciones completas con Express.js/a>
+            <a href="tema03/t03_02">Autenticación de usuarios</a>
+            <a href="tema03/t03_03">Comunicación en tiempo real con socket.io</a>
+            <a href="tema03/t03_04">Desarrollo de aplicaciones con Nest.js</a>            
+        </div>
+    </div>
+    <div class="col-md-6">
+        <div class="celda p-3">
+            <h4>4. Despliegue de aplicaciones </h4>
+            <a href="tema04/t04_01">Despliegue de aplicaciones en servidores remotos</a>
+            <a href="tema04/t04_02">Uso básico de Docker</a>
+            <a href="tema04/t04_03">Introducción al cloud computing</a>                        
+        </div>
+    </div>
+</div>
