modificando el estilo

--- a/index.html
+++ b/index.html
@@ -40,9 +40,7 @@ title: Despliegue de Aplicaciones Web
             <a href="tema02/t02_05">Uso del ORM Sequelize</a>            
         </div>
     </div>
-</div>
 
-<div class="row g-3">
     <div class="col-md-6">
         <div class="celda p-3">
             <h4>3. Opciones avanzadas de Express.js</h4>
@@ -52,6 +50,7 @@ title: Despliegue de Aplicaciones Web
             <a href="tema03/t03_04">Desarrollo de aplicaciones con Nest.js</a>            
         </div>
     </div>
+
     <div class="col-md-6">
         <div class="celda p-3">
             <h4>4. Despliegue de aplicaciones </h4>
@@ -61,3 +60,5 @@ title: Despliegue de Aplicaciones Web
         </div>
     </div>
 </div>
+
+<div class="row"><p>&nbsp;</p></div>
